shopping_app/ak8s/3_service_shop.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-service
  namespace: online-shop-ns

spec:
  selector:
    app: online-shop-podd
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
