shopping_app/ak8s/4_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: online-shop-ingress
  namespace: online-shop-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /shop
        backend:
          service:
            name: online-shop-service
            port:
              # port number where my service is running
              number: 80
      - pathType: Prefix
        path: /apache
        backend:
          service:
            name: apache-service
            port:
              # port number where my service is running
              number: 80
